JiffleNowDev/src/objects/Jiffle_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Edit_URL__c</fullName>
        <label>External Edit URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jiffle_Event__c</fullName>
        <label>Jiffle Event</label>
        <referenceTo>Jiffle_Event__c</referenceTo>
        <relationshipName>Jiffle_Meetings_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Jiffle_Meeting_Location__c</fullName>
        <label>Jiffle Meeting Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jiffle_Meeting_UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Jiffle Meeting UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Jifflenow_Meeting_Id__c</fullName>
        <label>Jifflenow Meeting Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_with__c</fullName>
        <label>Meeting with</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cisco_Attendees__c</fullName>
        <label>Number of Cisco Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cisco_Executives__c</fullName>
        <label>Number of Cisco Executives</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Customer_Attendees__c</fullName>
        <label>Number of Customer Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Partner_Attendees__c</fullName>
        <label>Number of Partner Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Jiffle Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MT-{00000}</displayFormat>
        <label>Meeting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jiffle Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>